--- a/app/views/layouts/mturk.html.haml
+++ b/app/views/layouts/mturk.html.haml
@@ -17,10 +17,17 @@
   %head
     %title Task
     %meta{"http-equiv" => "Content-Type", :content => "text/html; charset=utf-8"}
-    %link{:rel => 'stylesheet', :type => 'text/css', :href => '//netdna.bootstrapcdn.com/twitter-bootstrap/2.0.4/css/bootstrap-combined.min.css'}
+    %link{:rel => 'stylesheet', :type => 'text/css', :href => '//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.0.4/css/bootstrap.css'}
+    %link{:href => "//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.0.4/css/bootstrap.css", :rel => "stylesheet", :type => 'text/css'}
+    %link{:href => "//cdnjs.cloudflare.com/ajax/libs/chosen/0.9.12/chosen.css", :rel => "stylesheet", :type => 'text/css'}
+
     %script{:type => 'text/javascript', :src => '//s3.amazonaws.com/mturk-public/externalHIT_v1.js'}
-    %script{:type => 'text/javascript', :src => '//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js'}
+    %script{:type => 'text/javascript', :src => '//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js'}
     %script{:type => 'text/javascript', :src => '//ajax.aspnetcdn.com/ajax/jquery.validate/1.9/jquery.validate.min.js'}
+    %script{:type => 'text/javascript', :src => "//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.0.4/bootstrap.min.js"}
+    %script{:type => 'text/javascript', :src => "//cdnjs.cloudflare.com/ajax/libs/chosen/0.9.12/chosen.jquery.min.js"}
+    %script{:type => 'text/javascript', :src => "//raw.github.com/sriram-r/assets/gh-pages/mturk_helper.js"}
+
     %style{:type => 'text/css'}
       :plain
         body {
