Handling response from mechanical turk for _components_. We may need to _redesign_the_workflow_ after we start using it regularly

--- a/app/views/components/_categorization.html.haml
+++ b/app/views/components/_categorization.html.haml
@@ -12,7 +12,7 @@
 %div      
   %em Categories
   %br/
-  %select.chzn-select{"data-placeholder" => "Choose categories as applicable (in the order of relevance)", :multiple => "", :style => "width:350px;", :tabindex => "4"}
+  %select.chzn-select{"data-placeholder" => "Choose categories as applicable (in the order of relevance)", :multiple => "", :style => "width:350px;", :tabindex => "4", :id => 'categories', :name => 'categories'}
     %option{:value => ""}
     %option{:value => "Apparel"} Apparel
     %option{:value => "Shoes"} Shoes
