added precision and recall for task response report

--- a/app/views/task_responses/index.html.haml
+++ b/app/views/task_responses/index.html.haml
@@ -114,6 +114,11 @@
           %td 
             #{vv[:count]}
         
+%hr
+  %p
+    Precision : #{@precision}
+  %p
+    Recall : #{@recall}
 
 
 %h1.table-header All Responses
