adding pool size

--- a/config/database.yml.erb
+++ b/config/database.yml.erb
@@ -10,6 +10,7 @@ development:
     encoding: utf8
     username: root
     host: localhost
+    pool: 50
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -20,6 +21,7 @@ test:
     encoding: utf8
     username: root
     host: localhost
+    pool: 50
 
 production:
     adapter: mysql2
@@ -27,3 +29,4 @@ production:
     encoding: utf8
     username: root
     host: localhost
+    pool: 50
